adding template module

--- a/ports/gba/Makefile
+++ b/ports/gba/Makefile
@@ -18,8 +18,11 @@ SRC_C = \
 	shared/runtime/pyexec.c \
 	shared/runtime/stdout_helpers.c \
 
+SRC_C += modmyport.c
+
 # Define source files containung qstrs.
 SRC_QSTR += shared/readline/readline.c shared/runtime/pyexec.c
+SRC_QSTR += modmyport.c
 
 # Define the required object files.
 OBJ = $(PY_CORE_O) $(addprefix $(BUILD)/, $(SRC_C:.c=.o))
