Disable cron job in ports_zephyr.yml
Disable cron job for scheduled runs in forked repository.

Signed-off-by: Steve Schnepp <steve.schnepp@pwkf.org>

--- a/.github/workflows/ports_zephyr.yml
+++ b/.github/workflows/ports_zephyr.yml
@@ -15,7 +15,9 @@ on:
   schedule:
      # Scheduled run exists to keep master branch Zephyr cache entry hot
      # and prevent creating many redundant per-branch cache entries instead.
-     - cron: "40 4 * * *"
+     
+     # Cron disabled for now, as there's no point in doing it in my fork
+     # - cron: "40 4 * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
